--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,12 +20,15 @@
 }
 
 body{
-  background-image: url('/assets/images/Layer\ 1\ copy\ 2\ 6.png');
   /* background-repeat: no-repeat;
   background-size: cover;     
   background-position: center;
   min-height: 100vh;   */
   overflow-x: hidden;
+}
+.container{
+  background-image: url('/assets/images/Layer\ 1\ copy\ 2\ 6.png');
+
 }
 #localLayout{
   background-color: rgba(14, 4, 29);
