--- a/src/components/footer/_style.scss
+++ b/src/components/footer/_style.scss
@@ -1,20 +1,52 @@
-#footer{
-    .gradientf-border-btn {
-        position: relative;
-        padding: 12px 24px;
-        color: #fff;
-        border: none;
-        border-radius: 28px;
-        z-index: 0;
-        cursor: pointer;
-        isolation: isolate;
-        background-color: #281e342c;
-        backdrop-filter: blur(1px);
-        transition: background-color 0.3s ease; 
+#footer {
+  .gradientt-border-btn {
+    position: relative;
+    padding: 12px 24px;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    z-index: 0;
+    cursor: pointer;
+    isolation: isolate;
+    background-color: #281e3443;
+    backdrop-filter: blur(1px);
+    transition: background-color 0.3s ease;
+  
     
-        
-    
-        &::before {
+  
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      padding: 2.2px;
+      border-radius: 8px;
+      background: radial-gradient(circle at center, rgba(255, 255, 255, 0.6), rgb(31, 29, 29));
+      background-size: 200% 200%;
+      animation: rotateGradient 4s linear infinite;
+      -webkit-mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+      -webkit-mask-composite: xor;
+      mask-composite: exclude;
+      z-index: -1;
+      box-sizing: border-box;
+      pointer-events: none;
+    }
+    .miniCard{
+      display: flex;
+      gap: 6px;
+      position: relative;
+      padding: 10px;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      z-index: 0;
+      cursor: pointer;
+      isolation: isolate;
+      background-color: #281e3455;
+      backdrop-filter: blur(1px);
+      transition: background-color 0.3s ease; 
+      &::before {
           content: "";
           position: absolute;
           inset: 0;
@@ -29,42 +61,57 @@
           z-index: -1; 
           box-sizing: border-box;
           pointer-events: none;
-
+    
           
         }
-        .miniCard{
-            display: flex;
-            gap: 6px;
-            position: relative;
-            padding: 10px;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            z-index: 0;
-            cursor: pointer;
-            isolation: isolate;
-            background-color: #281e3455;
-            backdrop-filter: blur(1px);
-            transition: background-color 0.3s ease; 
-            &::before {
-                content: "";
-                position: absolute;
-                inset: 0;
-                padding: 2px;
-                border-radius: 8px;
-                background: radial-gradient(circle, rgba(255, 255, 255, 0.595) 0%, rgb(31, 29, 29) 100%);
-                -webkit-mask:
-                  linear-gradient(#fff 0 0) content-box,
-                  linear-gradient(#fff 0 0);
-                -webkit-mask-composite: xor;
-                mask-composite: exclude;
-                z-index: -1; 
-                box-sizing: border-box;
-                pointer-events: none;
+    }
+  }
+  
+  @keyframes rotateGradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
+}
+
+
+.miniCard{
+  display: flex;
+  gap: 6px;
+  position: relative;
+  padding: 10px;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  z-index: 0;
+  cursor: pointer;
+  isolation: isolate;
+  background-color: #281e3455;
+  backdrop-filter: blur(1px);
+  transition: background-color 0.3s ease; 
+  &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      padding: 2px;
+      border-radius: 8px;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.595) 0%, rgb(31, 29, 29) 100%);
+      -webkit-mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+      -webkit-mask-composite: xor;
+      mask-composite: exclude;
+      z-index: -1; 
+      box-sizing: border-box;
+      pointer-events: none;
+
       
-                
-              }
-          }
-        
-      }
+    }
 }
