--- a/src/components/intro/_style.scss
+++ b/src/components/intro/_style.scss
@@ -1,5 +1,6 @@
 #imgIntro{
-    filter: drop-shadow(10px 10px 55px #080667);
+  animation: rotateShadow 3.5s linear infinite;
+  transition: transform 0.3s ease;
 }
 #intro{
 
@@ -11,14 +12,14 @@
     border-radius: 8px;
     z-index: 0;
     cursor: pointer;
-    isolation: isolate; /* muhim: ::before ni to'g'ri ko'rsatadi */
+    isolation: isolate; 
   }
   
   .gradient-border-btn::before {
     content: "";
     position: absolute;
     inset: 0;
-    padding: 1px; /* border qalinligi */
+    padding: 1px; 
     border-radius: 8px;
     background: radial-gradient(circle, rgba(255, 255, 255, 0.508) 0%, rgb(70, 67, 67) 100%);
     -webkit-mask:
@@ -31,3 +32,21 @@
     pointer-events: none;
   }
 }
+@keyframes rotateShadow {
+  0% {
+    filter: drop-shadow(40px 0px 80px rgba(90, 0, 219, 0.8)); 
+  }
+  25% {
+    filter: drop-shadow(0px 40px 80px rgba(90, 0, 219, 0.8));  
+  }
+  50% {
+    filter: drop-shadow(-40px 0px 80px rgba(90, 0, 419, 0.8)); // chap
+  }
+  75% {
+    filter: drop-shadow(0px -40px 80px rgba(90, 0, 419, 0.8)); // yuqori
+  }
+  100% {
+    filter: drop-shadow(40px 0px 80px rgba(90, 0, 219, 0.8));  // yana o‘ng
+  }
+}
+
