--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,16 +20,11 @@
 }
 
 body{
-  /* background-repeat: no-repeat;
-  background-size: cover;     
-  background-position: center;
-  min-height: 100vh;   */
+  position: relative;
+  z-index: 0;
   overflow-x: hidden;
 }
-.container{
-  background-image: url('/assets/images/Layer\ 1\ copy\ 2\ 6.png');
 
-}
 #localLayout{
   background-color: rgba(14, 4, 29);
   backdrop-filter: blur(1px);
@@ -49,3 +44,46 @@ option {
   color: rgb(255, 255, 255); 
   appearance: none;
 }
+@keyframes fly {
+  0% {
+    transform: translate(8vw, 1200px); /* markaz, 500px pastdan boshlanadi */
+  }
+  25% {
+    transform: translate(27vw, 1200px);
+  }
+  50% {
+    transform: translate(35vw, 1400px);
+  }
+  75% {
+    transform: translate(53vw, 1500px);
+  }
+  100% {
+    transform: translate(65vw, 1600px); 
+  }
+}
+
+
+.bird-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* foydalanuvchi bosmasin */
+  z-index: -10;
+}
+
+.flying-bird {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background-image: url('/assets/images/Layer 1 copy 2 6.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  animation: fly 20s linear infinite;
+  opacity: 0.6;
+  pointer-events: none;
+  z-index: -10;
+}
+
