--- a/src/ui/button/_style.scss
+++ b/src/ui/button/_style.scss
@@ -1,12 +1,12 @@
 @layer utilities {
     .btn-radial {
-      background: radial-gradient(circle, rgba(255, 255, 255, 0.103) 0%, rgba(0, 0, 0, 1) 100%);
+      background: radial-gradient(circle, rgba(253, 245, 245, 0.028) 0%, rgb(27, 26, 26) 100%);
      
       
     }
     .gradient-border-btn {
         position: relative;
-        padding: 12px 24px;
+        padding: 2px 24px;
         color: #fff;
         border: none;
         border-radius: 8px;
@@ -21,7 +21,7 @@
         inset: 0;
         padding: 2px; /* border qalinligi */
         border-radius: 8px;
-        background: radial-gradient(circle, rgba(255, 255, 255, 0.272) 0%, rgba(0, 0, 0, 1) 100%);
+        background: radial-gradient(circle, rgba(255, 255, 255, 0.272) 0%, rgb(22, 22, 22) 100%);
         -webkit-mask:
           linear-gradient(#fff 0 0) content-box,
           linear-gradient(#fff 0 0);
